force-app/main/default/objects/Competitor_Profile__c/Competitor_Profile__c.object-meta.xml
<CustomObject>
    <label>Competitor Profile</label>
    <nameField>
        <label>Competitor Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>