force-app/main/default/objects/Competitor_Profile__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Profile</label>
    <referenceTo>CustomerProfile__c</referenceTo>
    <relationshipLabel>Competitor Profiles</relationshipLabel>
    <relationshipName>Competitor_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>