force-app/main/default/objects/Competitor_Profile__c/fields/Key_Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitor_Name__c</fullName>
    <label>Key Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>