force-app/main/default/objects/Competitor_Profile__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>