force-app/main/default/objects/Competitor_Profile__c/fields/Share_of_the_wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_the_wallet__c</fullName>
    <label>Share of the wallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>