force-app/main/default/objects/Competitor_Profile__c/fields/Trend_of_competitor_share__c.field-meta.xml
<CustomField>
    <fullName>Trend_of_competitor_share__c</fullName>
    <label>Trend of competitor share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increasing</fullName>
            </value>
            <value>
                <fullName>Decreasing</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>